fixed nav bar disapear on mobile size

--- a/styles/scss/components/mobilesizemessage.scss
+++ b/styles/scss/components/mobilesizemessage.scss
@@ -11,4 +11,20 @@
         
     }
 
+    .nav__wrapper>*{
+        display: none;
+    }
+    .messageWrapper{
+        display: grid;
+        
+    }
+
 }
+
+// @media only screen and (max-width: 600px) {
+    
+//     .nav__wrapper:not(.messageWrapper){
+//         filter: blur(1px);
+//     }
+
+// }
